check2/docker-gs-ping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-gs-ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-gs-ping
  template:
    metadata:
      labels:
        app: docker-gs-ping
    spec:
      containers:
        - name: app
          image: olliefr/docker-gs-ping
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: docker-gs-ping
spec:
  selector:
    app: docker-gs-ping
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
