check2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
spec:
  rules:
    - host: "simulation3.test"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-gs-ping
                port:
                  number: 8080
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: helloworld 
                port:
                  number: 8080
          - path: /uuid
            pathType: Prefix
            backend:
              service:
                name: helloworld 
                port:
                  number: 8080
